10-atlassian/confluence/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: atlassian
  name: confluence
  labels:
    app.kubernetes.io/instance: confluence

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      labels:
        app: confluence
    spec:
#     nodeSelector:
#       kubernetes.io/hostname: "dev"
      containers:
      - name: confluence
        image: atlassian/confluence-server
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8090
#         hostPort: 8090
        - name: synchrony
          containerPort: 8091
#         hostPort: 8091
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
        - name: etc-ssl
          mountPath: /etc/ssl
        - name: etc-letsencrypt
          mountPath: /etc/letsencrypt
        - name: mysql-lib
          mountPath: /opt/atlassian/confluence/confluence/WEB-INF/lib/mysql-connector-java-8.0.22.jar
        - name: data-docker
          mountPath: /var/atlassian/application-data/confluence

      volumes:
      - name: tz-config
        hostPath:
          path: /etc/localtime
      - name: etc-ssl
        hostPath:
          path: /etc/ssl
      - name: etc-letsencrypt
        hostPath:
          path: /etc/letsencrypt
      - name: mysql-lib
        hostPath:
          path: /data/libs/mysql-connector-java-8.0.22.jar
      - name: data-docker
        hostPath:
          path: /data/kube/confluence
          type: DirectoryOrCreate
