10-atlassian/confluence/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  namespace: atlassian
  name: confluence
  labels:
    app.kubernetes.io/instance: confluence

spec:
  selector:
    app: confluence
  ports:
  - name: confluence
    port: 8090
    protocol: TCP
    targetPort: 8090
  - name: synchrony
    port: 8091
    protocol: TCP
    targetPort: 8091
  type: ClusterIP
