10-atlassian/confluence/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: atlassian
  name: confluence
  annotations:
    kubernetes.io/ingress.class: "traefik"
  labels:
    app.kubernetes.io/instance: atlassian

spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-gamehost
  routes:
    - match: (Host(`apps.gamehost.fi`) || Host(`dev.gamehost.fi`)) && PathPrefix(`/confluence`)
      kind: Rule
      services:
        - name: confluence
          port: 8090
